--- a/package.json
+++ b/package.json
@@ -2,11 +2,6 @@
   "name": "hello-react-redux",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -28,7 +23,13 @@
       "last 1 safari version"
     ]
   },
+  "dependencies": {
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-scripts": "3.2.0"
+  },
   "devDependencies": {
+    "react-redux": "^7.1.1",
     "redux": "^4.0.4"
   }
 }
